added home page

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,50 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Website</title>
+  <title>zainezq</title>
   <link rel="stylesheet" href="styles/main.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet" />
 </head>
+
+
 <body>
-  <h1>Hello, world!</h1>
-  <script src="scripts/main.js"></script>
+    <script src="scripts/main.js"></script>
+    
+    <div class="home-section">
+    <h1>Zaine Qayyum</h1>
+    <h3 class="email-link"> <a class="email-link" href="mailto:zaineulabideen@outlook.com" target="_blank">zaineulabideen (at) outlook (dot) com</a></h3>
+    <h3 class="rss-link">
+        <a class="email-link" href="/assets/rss-feed.xml" target="_blank">RSS</a>
+        |
+        <a class="email-link" href="/changelog">Changelog</a>
+        |
+        <a class="email-link" href="/sitemap">Sitemap</a>
+    </h3>
+    <p>I'm a Computer Science graduate at the University of Birmingham.</p>
+    <p>In this page, you will mainly find links to projects and blogs as well as personal information on things I'm currently working on. I used to have this website house blogs and the <a href="https://garden.zainezq.com" target="_blank">Garden</a></strong> storing my notes, however I wanted to have a single place for everything, hence why they've been moved to the garden.</p>
+
+    <h2>About</h2>
+    <p>It would be exhaustive to list all my interests, as they tend to expand almost every week.
+    I love using Emacs and Linux as my digital homestead, and I plan on writing more about it in the future. See the <a href="https://garden.zainezq.com/projects" target="_blank">projects</a> page for a detailed description of what I'm currently working on.
+    I plan on reading 25 books this year (because 2025 right??) and HOPEFULLY 5 research papers. You can subscribe to my <a href="/assets/rss-feed.xml" target="_blank">RSS feed</a> to get the latest updates.
+    </p>
+    
+    <h2>Now</h2>
+    <ul>
+        <li><strong>Working on the <a href="https://garden.zainezq.com" target="_blank">Garden</a></strong></li>
+        <li><strong>Ricing my Linux</strong></li>
+        <li><strong>Modifying <a href="https://garden.zainezq.com/projects/home-lab" target="_blank">my Home Lab</a></strong></li>
+    </ul>
+    <p><a href="components/now.html">Click</a> to see more information</p>
+
+    <p>Thanks for visiting!</p>
+    <a href="https://ko-fi.com/s/4662b19f61" target="_blank">
+        <img class="donut-powered" src="assets/HumanContent_08.png" alt="Donut Powered" height="31" width="88">
+    </a>
+    </div>
+
+
 </body>
+
+
 </html>
