--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,9 @@
     <h3 class="rss-link">
         <a class="email-link" href="/assets/rss-feed.xml" target="_blank">RSS</a>
         |
-        <a class="email-link" href="/changelog">Changelog</a>
+        <a class="email-link" href="components/changelog.html">Changelog</a>
         |
-        <a class="email-link" href="/sitemap">Sitemap</a>
+        <a class="email-link" href="components/sitemap.html">Sitemap</a>
     </h3>
     <p>I'm a Computer Science graduate at the University of Birmingham.</p>
     <p>In this page, you will mainly find links to projects and blogs as well as personal information on things I'm currently working on. I used to have this website house blogs and the <a href="https://garden.zainezq.com" target="_blank">Garden</a></strong> storing my notes, however I wanted to have a single place for everything, hence why they've been moved to the garden.</p>
